Fix T64687: Loop select work only with edges

Regression in recent commit 8a6414ed46f66